# firebird_peregrine_falcon

./: .gitignore  Cargo.toml  DEPLOYMENT.md  GITHUB_SETUP.md  README.md  config.py  extract_agile_log_obrigacao.py  prefect_deployment.py  requirements.txt  run_agile_log_obrigacao.ps1  run_agile_log_obrigacao.sh
.github/workflows/: ci.yml
prefect/: deploy.py  flow.py
src/: config.rs  extractor.rs  lib.rs  main.rs
