[package]
name = "firebird_peregrine_falcon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rayon = "1.10"
arrow = "53"
parquet = "53"
num_cpus = "1.0"
sha2 = "0.10"
crossbeam-channel = "0.5"
rsfbclient = { version = "0.26", default-features = true, features = ["native_client"] }
clap = { version = "4.5", features = ["derive"] }
memmap2 = "0.9"
sys-info = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

